--- a/public/acendeorosh/index.html
+++ b/public/acendeorosh/index.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/public/nathanzinho/style.css">
+  <link rel="stylesheet" href="/acendeorosh/style.css">
   <title>E O NARGAS NATHANSINHOOOOOOOOO?</title>
 </head>
 <body>
   <div class="container">
     <button id="btnCadeONarga" onclick="acendeORosh()">E O NARGAS NATHANSINHOOOOOOOOO????</button>
-    <video id="videoNarga" src="/public/nathanzinho/assets/narga.mp4" controls class="hidden"></video>
+    <video id="videoNarga" src="/acendeorosh/assets/narga.mp4" controls class="hidden"></video>
     <button id="btnAcendeuONarga" class="hidden" onclick="acendeuNathanzinho()">ACENDEU O NARGA NATHANSINHOOOOOOOOO RUF RUF</button>
   </div>
 
